# CPP4_3DViewer

./: README.md
src/: CMakeLists.txt  Doxyfile  Makefile
src/Controller/: contrl.cpp
src/Model/: model.cpp  obj_data.h  parser.cpp  parser.h  transformation.cpp  transformation.h
src/Tests/: affin.cpp  main.cpp  main.h  parser.cpp
src/Tests/data/: cube.txt
src/View/: glwidget.cpp  glwidget.h  viewer.cpp  viewer.h  viewer.ui
